# ArrayFire-Programming

./: .gitignore  README.md
01-ArrayProgramming/MAIN_MONTECARLO/: MAIN_MONTECARLO.cpp  MAIN_MONTECARLO.vcxproj  MAIN_MONTECARLO.vcxproj.filters  make.sh
02-STREAMLINE3D/: MAIN_SHOOTING_METHOD.sln  MAIN_STREAMLINE3D.sln  streamline3D.xlsx
02-STREAMLINE3D/MAIN_STREAMLINE3D/: MAIN_STREAMLINE3D.cpp
03-Heat equation/: MAIN_HEAT2D.sln  heat equation.pptx  heat2D.xlsx
03-Heat equation/MAIN_HEAT2D/: MAIN_HEAT2D.cpp  MAIN_HEAT2D.vcxproj  MAIN_HEAT2D.vcxproj.filters
03-Heat equation/OutPut/: Order of accuracy.plt  error.lay
04-Poisson equation/: MAIN_POISSON2D.sln  Poison equation.pptx  poisson2D.xlsx
04-Poisson equation/MAIN_POISSON2D/: AnalyticalSolution.cpp  AnalyticalSolution.h  ClassDiagram.cd  DenseSolver.cpp  DenseSolver.h  Field.cpp  Field.h  Grid.cpp  Grid.h  JacobiSolver.cpp  JacobiSolver.h  LinearSys.cpp  LinearSys.h  MAIN_POISSON2D.cpp  MAIN_POISSON2D.vcxproj  MAIN_POISSON2D.vcxproj.filters  Matrix.lay  PoisonSolver.cpp  PoisonSolver.h  SparsLinearSys.cpp  SparsLinearSys.h  numericalSolution.lay
04-Poisson equation/MAIN_POISSON2D_gTest/: Examples.h  GridTest.cpp  GridTest.h  MAIN_POISSON2D_gTest.vcxproj  MAIN_POISSON2D_gTest.vcxproj.filters  Performance.cpp  Performance.h  PerformanceTest.cpp  (+3 more)
05-Advection problem/: MAIN_ADVECTION2D.sln  MAIN_GODUNOV1D.sln  bumpError.xlsx  squareWaveError.xlsx
MEC6215_DEVOIR_01_ArrayProgramming/: MAIN_MONTECARLO.sln
MEC6215_DEVOIR_01_ArrayProgramming/MAIN_MONTECARLO/: CMakeLists.txt  MAIN_MONTECARLO.cpp
(+118 files in other folders)
